Delete WordPress navigation instead of commenting
- Completely remove vMDC service navigation section
- Delete breadcrumbs that contain WordPress links
- Convert WordPress links to plain text (spans in content, text nodes in footer)
- Clean approach avoids HTML escaping issues

--- a/data.html
+++ b/data.html
@@ -61,7 +61,7 @@
 <script>
 document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
 </script>
-<a class="govuk-skip-link" data-module="govuk-skip-link" href="data.html">Skip to main content</a>
+<a class="govuk-skip-link" data-module="govuk-skip-link" href="index.html">Skip to main content</a>
 <header>
 <!-- BRANDING -->
 <div class="govuk-header has-gdsc-grey-border-color" data-module="govuk-header">
@@ -90,39 +90,10 @@ document.body.className = ((document.body.className) ? document.body.className +
 </div><!-- /.govuk-header__container -->
 </div><!-- /.govuk-header -->
 <!-- NAVIGATION -->
-<section aria-label="Service information" class="govuk-service-navigation" data-module="govuk-service-navigation">
-<div class="govuk-width-container">
-<div class="govuk-service-navigation__container">
-<span class="govuk-service-navigation__service-name">
-<a class="govuk-service-navigation__link" href="https://manchesterdigitalcampus.campaign.gov.uk/">
-                    virtual Manchester Digital Campus (vMDC)                </a>
-</span>
-<nav aria-label="Menu" class="govuk-service-navigation__wrapper">
-<button aria-controls="navigation" aria-label="Show or hide Top Level Navigation" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" hidden="" type="button">
-                    Menu                </button>
-<ul class="govuk-service-navigation__list" id="navigation"><li class="menu-item menu-item--home"><a href="https://manchesterdigitalcampus.campaign.gov.uk/">Home</a></li><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139" id="menu-item-139"><a href="https://manchesterdigitalcampus.campaign.gov.uk/discover/">Discover</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-page-ancestor menu-item-102" id="menu-item-102"><a href="https://manchesterdigitalcampus.campaign.gov.uk/learn/">Learn</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103" id="menu-item-103"><a href="https://manchesterdigitalcampus.campaign.gov.uk/connect/">Connect</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101" id="menu-item-101"><a href="https://manchesterdigitalcampus.campaign.gov.uk/join/">Join</a></li>
-</ul> </nav>
-</div>
-</div>
-</section>
+
 </header>
 <div class="govuk-width-container">
-<nav aria-label="Breadcrumb" class="govuk-breadcrumbs govuk-breadcrumbs--collapse-on-mobile">
-<ol class="govuk-breadcrumbs__list">
-<li class="govuk-breadcrumbs__list-item">
-<a class="govuk-breadcrumbs__link" href="https://manchesterdigitalcampus.campaign.gov.uk/">Home</a>
-</li>
-<li class="govuk-breadcrumbs__list-item">
-<a class="govuk-breadcrumbs__link" href="https://manchesterdigitalcampus.campaign.gov.uk/learn/">Learn</a>
-</li>
-<li class="govuk-breadcrumbs__list-item">
-<a class="govuk-breadcrumbs__link" href="index.html">Get Tech Certified</a>
-</li>
-</ol>
-</nav>
+
 <main class="govuk-main-wrapper" id="main-content">
 <article>
 <div class="page__content page__content--has-secondary-nav [ govuk-grid-row ]">
@@ -146,7 +117,7 @@ document.body.className = ((document.body.className) ? document.body.className +
 <h2 class="govuk-!-font-size-19">In this section</h2>
 <nav aria-label="Section links">
 <ul class="secondary-navigation__items">
-<li class="page_item page-item-96 page_item_has_children current_page_ancestor"><a href="https://manchesterdigitalcampus.campaign.gov.uk/learn/">Learn</a><ul class="children"><li class="page_item page-item-29 page_item_has_children current_page_ancestor current_page_parent"><a href="index.html">Get Tech Certified</a><ul class="children"><li class="page_item page-item-1803"><a href="cloud.html">Cloud &amp; Platform Technologies</a></li><li class="page_item page-item-1816"><a href="cyber-security.html">Cyber Security</a></li><li class="page_item page-item-1765 current_page_item"><a aria-current="page" href="data.html">Data</a></li><li class="page_item page-item-1821"><a href="finops.html">FinOps</a></li><li class="page_item page-item-1826"><a href="index.html">Machine Learning &amp; Artificial Intelligence</a></li><li class="page_item page-item-1823"><a href="quantum-computing.html">Quantum Computing</a></li><li class="page_item page-item-1829"><a href="software-engineering.html">Software Engineering</a></li><li class="page_item page-item-982"><a href="faqs.html">FAQs</a></li></ul></li><li class="page_item page-item-669"><a href="https://manchesterdigitalcampus.campaign.gov.uk/learn/artificial-intelligence/">Artificial Intelligence</a></li><li class="page_item page-item-356"><a href="data.html">Digital and Data community-led learning</a></li><li class="page_item page-item-360"><a href="https://manchesterdigitalcampus.campaign.gov.uk/learn/spotlight-webinars/">Spotlight webinars</a></li></ul></li> </ul>
+<li class="page_item page-item-96 page_item_has_children current_page_ancestor"><span>Learn</span><ul class="children"><li class="page_item page-item-29 page_item_has_children current_page_ancestor current_page_parent"><a href="index.html">Get Tech Certified</a><ul class="children"><li class="page_item page-item-1803"><a href="cloud.html">Cloud &amp; Platform Technologies</a></li><li class="page_item page-item-1816"><a href="cyber-security.html">Cyber Security</a></li><li class="page_item page-item-1765 current_page_item"><a aria-current="page" href="data.html">Data</a></li><li class="page_item page-item-1821"><a href="finops.html">FinOps</a></li><li class="page_item page-item-1826"><a href="machine-learning-ai.html">Machine Learning &amp; Artificial Intelligence</a></li><li class="page_item page-item-1823"><a href="quantum-computing.html">Quantum Computing</a></li><li class="page_item page-item-1829"><a href="software-engineering.html">Software Engineering</a></li><li class="page_item page-item-982"><a href="faqs.html">FAQs</a></li></ul></li><li class="page_item page-item-669"><span>Artificial Intelligence</span></li><li class="page_item page-item-356"><a href="#" onclick="return false;">Digital and Data community-led learning</a></li><li class="page_item page-item-360"><span>Spotlight webinars</span></li></ul></li> </ul>
 </nav>
 </div><!-- /.secondary-navigation -->
 </div><!-- /.govuk-grid-column-one-third -->
@@ -172,10 +143,10 @@ document.body.className = ((document.body.className) ? document.body.className +
 <div class="govuk-footer__meta">
 <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 <h2 class="govuk-visually-hidden">Footer menu</h2>
-<ul class="govuk-footer__inline-list" id="menu-footermenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-185" id="menu-item-185"><a href="https://manchesterdigitalcampus.campaign.gov.uk/accessibility-statement/">Accessibility Statement</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2158" id="menu-item-2158"><a href="https://manchesterdigitalcampus.campaign.gov.uk/privacy-notice/">Privacy Notice</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2157" id="menu-item-2157"><a href="https://manchesterdigitalcampus.campaign.gov.uk/cookie-details/">Cookie Details</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2159" id="menu-item-2159"><a href="https://manchesterdigitalcampus.campaign.gov.uk/__trashed/">Cookie Settings</a></li>
+<ul class="govuk-footer__inline-list" id="menu-footermenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-185" id="menu-item-185">Accessibility Statement</li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2158" id="menu-item-2158">Privacy Notice</li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2157" id="menu-item-2157">Cookie Details</li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2159" id="menu-item-2159">Cookie Settings</li>
 </ul> <svg aria-hidden="true" class="govuk-footer__licence-logo" focusable="false" height="17" viewbox="0 0 483.2 195.7" width="41" xmlns="http://www.w3.org/2000/svg">
 <path d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" fill="currentColor"></path>
 </svg>
